[project]
name = "offline-confluence"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.34.2",
]

[project.scripts]
pull = "offline_confluence.pull:main"
push = "offline_confluence.push:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
